feat(main): refactoring, correcting models, fixing business logics, and correcting docker configurations